data/derived/sp14/progs/unify/prog4534.ml.out
Characters 177-183:
  let (_, result) = List.fold_right f ((0, 0) :: l) base in
                                       ^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type int
